other(ci): Improved deployments
We remove some errors in the travis deployment stages by deploying just one pipeline of the multiple versions and not using growl

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src",
     "start:watch": "nodemon src",
-    "test": "istanbul cover --report text --report lcov _mocha -- --recursive --growl",
+    "test": "istanbul cover --report text --report lcov _mocha -- --recursive",
     "test:watch": "mocha  --watch --recursive --growl",
     "lint": "eslint .",
     "check-coverage": "istanbul check-coverage --statements 50 --branches 50 --functions 70",
