--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.5",
   "description": "Create a JS package with es6, testing, linting, and publication tools included",
   "main": "index.js",
+  "bin": {
+    "create-js-package": "bin/create-js-package.js"
+  },
   "scripts": {
     "start": "node src",
     "start:watch": "nodemon src",
