--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,7 @@
 {
-    "extends": "airbnb-base",
+    "extends": ["eslint:recommended", "prettier"],
+
+    "plugins": ["prettier"],
 
     "env": {
         "browser": true,
@@ -16,6 +18,9 @@
     },
 
     "rules": {
+        "prettier/prettier": [
+            "error", { "singleQuote": true, "tabWidth": 4 }
+        ],
         "no-console": "off",
         "max-len": ["error", 120],
         "padded-blocks": "off",
