--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest test --collectCoverage --ci",
     "test:watch": "jest test --watchAll --notify",
     "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "check-coverage": "istanbul check-coverage --statements 50 --branches 50 --functions 70",
     "prerelease": "npm run lint && npm test && npm run check-coverage",
     "release:patch": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push --follow-tags",
@@ -38,12 +39,13 @@
   ],
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.12.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint": "^4.13.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.4.0",
     "generate-changelog": "^1.6.0",
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
+    "prettier": "^1.9.2",
     "sinon": "^4.1.2"
   },
   "dependencies": {
