Added support for ecma 2018

--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -3,6 +3,10 @@
 
     "plugins": ["prettier"],
 
+    "parserOptions": {
+        "ecmaVersion": 2018
+    },
+
     "env": {
         "browser": true,
         "node": true,
